2005-08-01  Jeroen Frijters  <jeroen@frijters.net>

	* NEWS: Added info about VM interfaces changes.
	* java/lang/Class.java
	(forName(String), forName(String, boolean, ClassLoader)): Simplified
	VM interface.
	* java/lang/ClassLoader.java
	(loadedClasses): Removed field.
	(defineClass(String,byte[],int,int,ProtectionDomain)): Removed
	code to add class to loadedClasses.
	* vm/reference/java/lang/VMClass.java
	(forName(String)): Removed method.
	(forName(String,boolean,ClassLoader)): New method.
	(initialize): Removed method.
	(loadArrayClass): Removed method.
	* vm/reference/java/lang/VMClassLoader.java
	(USE_VM_CACHE): Removed field.
	(findLoadedClass): Made native.

2005-08-01  Mark Wielaard  <mark@klomp.org>

	Reported by Wolfgang Baer <WBaer@gmx.de>
	* javax/swing/text/GapContent.java (shiftGap): Use new
	CapContentPosition in binarySearch.
	(shiftEnd): Likewise.

2005-08-01  Mark Wielaard  <mark@klomp.org>

	* doc/www.gnu.org/bugs.wml: New file.
	* doc/www.gnu.org/newsitems.txt: Add bugzilla entry.
	* doc/www.gnu.org/events/events.wml: Correct Fosdem 2005 date.
	* doc/www.gnu.org/include/layout.wml: Direct bug reports to bugs.html.

2005-08-01  Jan Roehrich <jan@roehrich.info>

        * javax.swing.plaf.basic.BasicTreeUI: Method drawCentered
        added / corrected javadoc issues in paintHorizonalLine 
        and paintVerticalLine / fixed getRightChildIndent signature
        (problem probably caused by copy/paste)

2005-08-01  Jan Roehrich <jan@roehrich.info>

        * javax.swing.plaf.basic.BasicTreeUI: paintVerticalLine and
        paintHorizontalLine added.

2005-07-31  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

        org/omg/DynamicAny/DynValueOperations.java,
        org/omg/DynamicAny/DynAnyFactory.java,
        org/omg/DynamicAny/DynAnyFactoryOperations.java,
        org/omg/DynamicAny/DynValue.java,
        org/omg/DynamicAny/DynValueBox.java,
        org/omg/DynamicAny/DynValueBoxOperations.java,